// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<MenuCard
  className=""
  image=""
  imageLandscape={false}
  items={
    Array [
      Object {
        "_id": "XxLPFMmmSW5hEQBxX",
        "icon": "speed-fast",
        "iconGroup": "linear",
        "module": "status",
        "moduleGroup": "system",
        "title": "Status",
        "value": "/system/status",
      },
      Object {
        "_id": "98uxp5y9GSHqrTbFC",
        "icon": "laptop-phone",
        "iconGroup": "linear",
        "module": "apps",
        "moduleGroup": "system",
        "title": "Apps",
        "value": "/system/apps",
      },
      Object {
        "_id": "joSBz8tdp3T5QNRx2",
        "icon": "server",
        "iconGroup": "linear",
        "module": "servers",
        "moduleGroup": "system",
        "title": "Servers",
        "value": "/system/servers",
      },
      Object {
        "_id": "NdAhGQgsSMFeSx6oW",
        "icon": "site-map",
        "iconGroup": "linear",
        "module": "versions",
        "moduleGroup": "system",
        "title": "Versions",
        "value": "/system/versions",
      },
      Object {
        "_id": "4mkgbqvSbq2FD3nkr",
        "icon": "user-lock",
        "iconGroup": "linear",
        "module": "roles",
        "moduleGroup": "system",
        "title": "Roles",
        "value": "/system/roles",
      },
    ]
  }
  moduleId=""
  onItemClick={[Function]}
  onSwitchClick={[Function]}
  selectedValue=""
  style={Object {}}
  switchEnabled={false}
  title="System"
>
  <div
    className="font:roboto-condensed border:all border-color:neutral-faded"
    style={
      Object {
        "borderRadius": "12px",
      }
    }
  >
    <div
      className="padding-y:5 padding-x:10 size:20 text-color:neutral-dim text:truncate border:bottom border-color:neutral-faded"
    >
      System
    </div>
    <div
      className="padding:5 overflow:hidden display:flex flex:items-center"
      style={
        Object {
          "borderRadius": "12px",
        }
      }
    >
      <div>
        <MenuItem
          className=""
          hidePicture={false}
          icon="speed-fast"
          iconColor="brand"
          iconGroup="linear"
          image=""
          module="status"
          moduleGroup="system"
          moduleId=""
          onClick={[Function]}
          pictureBgColor="white"
          pictureHeight={28}
          pictureWidth={28}
          style={Object {}}
          textColor="backdrop-alt"
          title="Status"
          value="/system/status"
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className="display:flex flex:items-center color:white padding:5 select:none cursor:pointer"
              onClick={[Function]}
            >
              <Thumb
                className=""
                color="white"
                height={28}
                icon="speed-fast"
                iconColor="brand"
                iconGroup="linear"
                image=""
                localImg=""
                offlineEnabled={false}
                width={28}
              >
                <div
                  className="display:flex flex:items-center flex:content-center border:rounded color:white"
                  style={
                    Object {
                      "WebkitFlex": "0 0 28px",
                      "flex": "0 0 28px",
                      "height": "28px",
                      "width": "28px",
                    }
                  }
                >
                  <FontIcon
                    className="text-color:brand"
                    color=""
                    group="linear"
                    icon="speed-fast"
                    size="20px"
                    style={Object {}}
                  >
                    <span
                      className="icon-linear:speed-fast text-color:brand"
                      style={
                        Object {
                          "color": "",
                          "fontSize": "20px",
                        }
                      }
                    />
                  </FontIcon>
                </div>
              </Thumb>
              <div
                className="display:flex flex:column flex:content-center margin-l:5 min-w:0 line-h:130p font:roboto-condensed"
              >
                <div
                  className="select:text size:16 line-h:120p text:truncate text-color:backdrop-alt"
                >
                  Status
                </div>
              </div>
            </div>
          </div>
        </MenuItem>
        <MenuItem
          className=""
          hidePicture={false}
          icon="laptop-phone"
          iconColor="brand"
          iconGroup="linear"
          image=""
          module="apps"
          moduleGroup="system"
          moduleId=""
          onClick={[Function]}
          pictureBgColor="white"
          pictureHeight={28}
          pictureWidth={28}
          style={Object {}}
          textColor="backdrop-alt"
          title="Apps"
          value="/system/apps"
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className="display:flex flex:items-center color:white padding:5 select:none cursor:pointer"
              onClick={[Function]}
            >
              <Thumb
                className=""
                color="white"
                height={28}
                icon="laptop-phone"
                iconColor="brand"
                iconGroup="linear"
                image=""
                localImg=""
                offlineEnabled={false}
                width={28}
              >
                <div
                  className="display:flex flex:items-center flex:content-center border:rounded color:white"
                  style={
                    Object {
                      "WebkitFlex": "0 0 28px",
                      "flex": "0 0 28px",
                      "height": "28px",
                      "width": "28px",
                    }
                  }
                >
                  <FontIcon
                    className="text-color:brand"
                    color=""
                    group="linear"
                    icon="laptop-phone"
                    size="20px"
                    style={Object {}}
                  >
                    <span
                      className="icon-linear:laptop-phone text-color:brand"
                      style={
                        Object {
                          "color": "",
                          "fontSize": "20px",
                        }
                      }
                    />
                  </FontIcon>
                </div>
              </Thumb>
              <div
                className="display:flex flex:column flex:content-center margin-l:5 min-w:0 line-h:130p font:roboto-condensed"
              >
                <div
                  className="select:text size:16 line-h:120p text:truncate text-color:backdrop-alt"
                >
                  Apps
                </div>
              </div>
            </div>
          </div>
        </MenuItem>
        <MenuItem
          className=""
          hidePicture={false}
          icon="server"
          iconColor="brand"
          iconGroup="linear"
          image=""
          module="servers"
          moduleGroup="system"
          moduleId=""
          onClick={[Function]}
          pictureBgColor="white"
          pictureHeight={28}
          pictureWidth={28}
          style={Object {}}
          textColor="backdrop-alt"
          title="Servers"
          value="/system/servers"
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className="display:flex flex:items-center color:white padding:5 select:none cursor:pointer"
              onClick={[Function]}
            >
              <Thumb
                className=""
                color="white"
                height={28}
                icon="server"
                iconColor="brand"
                iconGroup="linear"
                image=""
                localImg=""
                offlineEnabled={false}
                width={28}
              >
                <div
                  className="display:flex flex:items-center flex:content-center border:rounded color:white"
                  style={
                    Object {
                      "WebkitFlex": "0 0 28px",
                      "flex": "0 0 28px",
                      "height": "28px",
                      "width": "28px",
                    }
                  }
                >
                  <FontIcon
                    className="text-color:brand"
                    color=""
                    group="linear"
                    icon="server"
                    size="20px"
                    style={Object {}}
                  >
                    <span
                      className="icon-linear:server text-color:brand"
                      style={
                        Object {
                          "color": "",
                          "fontSize": "20px",
                        }
                      }
                    />
                  </FontIcon>
                </div>
              </Thumb>
              <div
                className="display:flex flex:column flex:content-center margin-l:5 min-w:0 line-h:130p font:roboto-condensed"
              >
                <div
                  className="select:text size:16 line-h:120p text:truncate text-color:backdrop-alt"
                >
                  Servers
                </div>
              </div>
            </div>
          </div>
        </MenuItem>
        <MenuItem
          className=""
          hidePicture={false}
          icon="site-map"
          iconColor="brand"
          iconGroup="linear"
          image=""
          module="versions"
          moduleGroup="system"
          moduleId=""
          onClick={[Function]}
          pictureBgColor="white"
          pictureHeight={28}
          pictureWidth={28}
          style={Object {}}
          textColor="backdrop-alt"
          title="Versions"
          value="/system/versions"
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className="display:flex flex:items-center color:white padding:5 select:none cursor:pointer"
              onClick={[Function]}
            >
              <Thumb
                className=""
                color="white"
                height={28}
                icon="site-map"
                iconColor="brand"
                iconGroup="linear"
                image=""
                localImg=""
                offlineEnabled={false}
                width={28}
              >
                <div
                  className="display:flex flex:items-center flex:content-center border:rounded color:white"
                  style={
                    Object {
                      "WebkitFlex": "0 0 28px",
                      "flex": "0 0 28px",
                      "height": "28px",
                      "width": "28px",
                    }
                  }
                >
                  <FontIcon
                    className="text-color:brand"
                    color=""
                    group="linear"
                    icon="site-map"
                    size="20px"
                    style={Object {}}
                  >
                    <span
                      className="icon-linear:site-map text-color:brand"
                      style={
                        Object {
                          "color": "",
                          "fontSize": "20px",
                        }
                      }
                    />
                  </FontIcon>
                </div>
              </Thumb>
              <div
                className="display:flex flex:column flex:content-center margin-l:5 min-w:0 line-h:130p font:roboto-condensed"
              >
                <div
                  className="select:text size:16 line-h:120p text:truncate text-color:backdrop-alt"
                >
                  Versions
                </div>
              </div>
            </div>
          </div>
        </MenuItem>
        <MenuItem
          className=""
          hidePicture={false}
          icon="user-lock"
          iconColor="brand"
          iconGroup="linear"
          image=""
          module="roles"
          moduleGroup="system"
          moduleId=""
          onClick={[Function]}
          pictureBgColor="white"
          pictureHeight={28}
          pictureWidth={28}
          style={Object {}}
          textColor="backdrop-alt"
          title="Roles"
          value="/system/roles"
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className="display:flex flex:items-center color:white padding:5 select:none cursor:pointer"
              onClick={[Function]}
            >
              <Thumb
                className=""
                color="white"
                height={28}
                icon="user-lock"
                iconColor="brand"
                iconGroup="linear"
                image=""
                localImg=""
                offlineEnabled={false}
                width={28}
              >
                <div
                  className="display:flex flex:items-center flex:content-center border:rounded color:white"
                  style={
                    Object {
                      "WebkitFlex": "0 0 28px",
                      "flex": "0 0 28px",
                      "height": "28px",
                      "width": "28px",
                    }
                  }
                >
                  <FontIcon
                    className="text-color:brand"
                    color=""
                    group="linear"
                    icon="user-lock"
                    size="20px"
                    style={Object {}}
                  >
                    <span
                      className="icon-linear:user-lock text-color:brand"
                      style={
                        Object {
                          "color": "",
                          "fontSize": "20px",
                        }
                      }
                    />
                  </FontIcon>
                </div>
              </Thumb>
              <div
                className="display:flex flex:column flex:content-center margin-l:5 min-w:0 line-h:130p font:roboto-condensed"
              >
                <div
                  className="select:text size:16 line-h:120p text:truncate text-color:backdrop-alt"
                >
                  Roles
                </div>
              </div>
            </div>
          </div>
        </MenuItem>
      </div>
    </div>
  </div>
</MenuCard>
`;

exports[`renders selected 1`] = `
<MenuCard
  className=""
  image=""
  imageLandscape={false}
  items={
    Array [
      Object {
        "_id": "XxLPFMmmSW5hEQBxX",
        "icon": "speed-fast",
        "iconGroup": "linear",
        "module": "status",
        "moduleGroup": "system",
        "title": "Status",
        "value": "/system/status",
      },
      Object {
        "_id": "98uxp5y9GSHqrTbFC",
        "icon": "laptop-phone",
        "iconGroup": "linear",
        "module": "apps",
        "moduleGroup": "system",
        "title": "Apps",
        "value": "/system/apps",
      },
      Object {
        "_id": "joSBz8tdp3T5QNRx2",
        "icon": "server",
        "iconGroup": "linear",
        "module": "servers",
        "moduleGroup": "system",
        "title": "Servers",
        "value": "/system/servers",
      },
      Object {
        "_id": "NdAhGQgsSMFeSx6oW",
        "icon": "site-map",
        "iconGroup": "linear",
        "module": "versions",
        "moduleGroup": "system",
        "title": "Versions",
        "value": "/system/versions",
      },
      Object {
        "_id": "4mkgbqvSbq2FD3nkr",
        "icon": "user-lock",
        "iconGroup": "linear",
        "module": "roles",
        "moduleGroup": "system",
        "title": "Roles",
        "value": "/system/roles",
      },
    ]
  }
  moduleId=""
  onItemClick={[Function]}
  onSwitchClick={[Function]}
  selectedValue="/system/apps"
  style={Object {}}
  switchEnabled={false}
  title="System"
>
  <div
    className="font:roboto-condensed border:all border-color:neutral-faded"
    style={
      Object {
        "borderRadius": "12px",
      }
    }
  >
    <div
      className="padding-y:5 padding-x:10 size:20 text-color:neutral-dim text:truncate border:bottom border-color:neutral-faded"
    >
      System
    </div>
    <div
      className="padding:5 overflow:hidden display:flex flex:items-center"
      style={
        Object {
          "borderRadius": "12px",
        }
      }
    >
      <div>
        <MenuItem
          className=""
          hidePicture={false}
          icon="speed-fast"
          iconColor="brand"
          iconGroup="linear"
          image=""
          module="status"
          moduleGroup="system"
          moduleId=""
          onClick={[Function]}
          pictureBgColor="white"
          pictureHeight={28}
          pictureWidth={28}
          style={Object {}}
          textColor="backdrop-alt"
          title="Status"
          value="/system/status"
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className="display:flex flex:items-center color:white padding:5 select:none cursor:pointer"
              onClick={[Function]}
            >
              <Thumb
                className=""
                color="white"
                height={28}
                icon="speed-fast"
                iconColor="brand"
                iconGroup="linear"
                image=""
                localImg=""
                offlineEnabled={false}
                width={28}
              >
                <div
                  className="display:flex flex:items-center flex:content-center border:rounded color:white"
                  style={
                    Object {
                      "WebkitFlex": "0 0 28px",
                      "flex": "0 0 28px",
                      "height": "28px",
                      "width": "28px",
                    }
                  }
                >
                  <FontIcon
                    className="text-color:brand"
                    color=""
                    group="linear"
                    icon="speed-fast"
                    size="20px"
                    style={Object {}}
                  >
                    <span
                      className="icon-linear:speed-fast text-color:brand"
                      style={
                        Object {
                          "color": "",
                          "fontSize": "20px",
                        }
                      }
                    />
                  </FontIcon>
                </div>
              </Thumb>
              <div
                className="display:flex flex:column flex:content-center margin-l:5 min-w:0 line-h:130p font:roboto-condensed"
              >
                <div
                  className="select:text size:16 line-h:120p text:truncate text-color:backdrop-alt"
                >
                  Status
                </div>
              </div>
            </div>
          </div>
        </MenuItem>
        <MenuItem
          className=""
          hidePicture={false}
          icon="laptop-phone"
          iconColor="brand"
          iconGroup="linear"
          image=""
          module="apps"
          moduleGroup="system"
          moduleId=""
          onClick={[Function]}
          pictureBgColor="white"
          pictureHeight={28}
          pictureWidth={28}
          style={Object {}}
          textColor="brand"
          title="Apps"
          value="/system/apps"
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className="display:flex flex:items-center color:white padding:5 select:none cursor:pointer"
              onClick={[Function]}
            >
              <Thumb
                className=""
                color="white"
                height={28}
                icon="laptop-phone"
                iconColor="brand"
                iconGroup="linear"
                image=""
                localImg=""
                offlineEnabled={false}
                width={28}
              >
                <div
                  className="display:flex flex:items-center flex:content-center border:rounded color:white"
                  style={
                    Object {
                      "WebkitFlex": "0 0 28px",
                      "flex": "0 0 28px",
                      "height": "28px",
                      "width": "28px",
                    }
                  }
                >
                  <FontIcon
                    className="text-color:brand"
                    color=""
                    group="linear"
                    icon="laptop-phone"
                    size="20px"
                    style={Object {}}
                  >
                    <span
                      className="icon-linear:laptop-phone text-color:brand"
                      style={
                        Object {
                          "color": "",
                          "fontSize": "20px",
                        }
                      }
                    />
                  </FontIcon>
                </div>
              </Thumb>
              <div
                className="display:flex flex:column flex:content-center margin-l:5 min-w:0 line-h:130p font:roboto-condensed"
              >
                <div
                  className="select:text size:16 line-h:120p text:truncate text-color:brand"
                >
                  Apps
                </div>
              </div>
            </div>
          </div>
        </MenuItem>
        <MenuItem
          className=""
          hidePicture={false}
          icon="server"
          iconColor="brand"
          iconGroup="linear"
          image=""
          module="servers"
          moduleGroup="system"
          moduleId=""
          onClick={[Function]}
          pictureBgColor="white"
          pictureHeight={28}
          pictureWidth={28}
          style={Object {}}
          textColor="backdrop-alt"
          title="Servers"
          value="/system/servers"
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className="display:flex flex:items-center color:white padding:5 select:none cursor:pointer"
              onClick={[Function]}
            >
              <Thumb
                className=""
                color="white"
                height={28}
                icon="server"
                iconColor="brand"
                iconGroup="linear"
                image=""
                localImg=""
                offlineEnabled={false}
                width={28}
              >
                <div
                  className="display:flex flex:items-center flex:content-center border:rounded color:white"
                  style={
                    Object {
                      "WebkitFlex": "0 0 28px",
                      "flex": "0 0 28px",
                      "height": "28px",
                      "width": "28px",
                    }
                  }
                >
                  <FontIcon
                    className="text-color:brand"
                    color=""
                    group="linear"
                    icon="server"
                    size="20px"
                    style={Object {}}
                  >
                    <span
                      className="icon-linear:server text-color:brand"
                      style={
                        Object {
                          "color": "",
                          "fontSize": "20px",
                        }
                      }
                    />
                  </FontIcon>
                </div>
              </Thumb>
              <div
                className="display:flex flex:column flex:content-center margin-l:5 min-w:0 line-h:130p font:roboto-condensed"
              >
                <div
                  className="select:text size:16 line-h:120p text:truncate text-color:backdrop-alt"
                >
                  Servers
                </div>
              </div>
            </div>
          </div>
        </MenuItem>
        <MenuItem
          className=""
          hidePicture={false}
          icon="site-map"
          iconColor="brand"
          iconGroup="linear"
          image=""
          module="versions"
          moduleGroup="system"
          moduleId=""
          onClick={[Function]}
          pictureBgColor="white"
          pictureHeight={28}
          pictureWidth={28}
          style={Object {}}
          textColor="backdrop-alt"
          title="Versions"
          value="/system/versions"
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className="display:flex flex:items-center color:white padding:5 select:none cursor:pointer"
              onClick={[Function]}
            >
              <Thumb
                className=""
                color="white"
                height={28}
                icon="site-map"
                iconColor="brand"
                iconGroup="linear"
                image=""
                localImg=""
                offlineEnabled={false}
                width={28}
              >
                <div
                  className="display:flex flex:items-center flex:content-center border:rounded color:white"
                  style={
                    Object {
                      "WebkitFlex": "0 0 28px",
                      "flex": "0 0 28px",
                      "height": "28px",
                      "width": "28px",
                    }
                  }
                >
                  <FontIcon
                    className="text-color:brand"
                    color=""
                    group="linear"
                    icon="site-map"
                    size="20px"
                    style={Object {}}
                  >
                    <span
                      className="icon-linear:site-map text-color:brand"
                      style={
                        Object {
                          "color": "",
                          "fontSize": "20px",
                        }
                      }
                    />
                  </FontIcon>
                </div>
              </Thumb>
              <div
                className="display:flex flex:column flex:content-center margin-l:5 min-w:0 line-h:130p font:roboto-condensed"
              >
                <div
                  className="select:text size:16 line-h:120p text:truncate text-color:backdrop-alt"
                >
                  Versions
                </div>
              </div>
            </div>
          </div>
        </MenuItem>
        <MenuItem
          className=""
          hidePicture={false}
          icon="user-lock"
          iconColor="brand"
          iconGroup="linear"
          image=""
          module="roles"
          moduleGroup="system"
          moduleId=""
          onClick={[Function]}
          pictureBgColor="white"
          pictureHeight={28}
          pictureWidth={28}
          style={Object {}}
          textColor="backdrop-alt"
          title="Roles"
          value="/system/roles"
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className="display:flex flex:items-center color:white padding:5 select:none cursor:pointer"
              onClick={[Function]}
            >
              <Thumb
                className=""
                color="white"
                height={28}
                icon="user-lock"
                iconColor="brand"
                iconGroup="linear"
                image=""
                localImg=""
                offlineEnabled={false}
                width={28}
              >
                <div
                  className="display:flex flex:items-center flex:content-center border:rounded color:white"
                  style={
                    Object {
                      "WebkitFlex": "0 0 28px",
                      "flex": "0 0 28px",
                      "height": "28px",
                      "width": "28px",
                    }
                  }
                >
                  <FontIcon
                    className="text-color:brand"
                    color=""
                    group="linear"
                    icon="user-lock"
                    size="20px"
                    style={Object {}}
                  >
                    <span
                      className="icon-linear:user-lock text-color:brand"
                      style={
                        Object {
                          "color": "",
                          "fontSize": "20px",
                        }
                      }
                    />
                  </FontIcon>
                </div>
              </Thumb>
              <div
                className="display:flex flex:column flex:content-center margin-l:5 min-w:0 line-h:130p font:roboto-condensed"
              >
                <div
                  className="select:text size:16 line-h:120p text:truncate text-color:backdrop-alt"
                >
                  Roles
                </div>
              </div>
            </div>
          </div>
        </MenuItem>
      </div>
    </div>
  </div>
</MenuCard>
`;

exports[`renders with context switch 1`] = `
<MenuCard
  className=""
  image="http://imgur.com/abQ9EaG.png"
  imageLandscape={false}
  items={
    Array [
      Object {
        "_id": "XxLPFMmmSW5hEQBxX",
        "icon": "speed-fast",
        "iconGroup": "linear",
        "module": "status",
        "moduleGroup": "system",
        "title": "Status",
        "value": "/system/status",
      },
      Object {
        "_id": "98uxp5y9GSHqrTbFC",
        "icon": "laptop-phone",
        "iconGroup": "linear",
        "module": "apps",
        "moduleGroup": "system",
        "title": "Apps",
        "value": "/system/apps",
      },
      Object {
        "_id": "joSBz8tdp3T5QNRx2",
        "icon": "server",
        "iconGroup": "linear",
        "module": "servers",
        "moduleGroup": "system",
        "title": "Servers",
        "value": "/system/servers",
      },
      Object {
        "_id": "NdAhGQgsSMFeSx6oW",
        "icon": "site-map",
        "iconGroup": "linear",
        "module": "versions",
        "moduleGroup": "system",
        "title": "Versions",
        "value": "/system/versions",
      },
      Object {
        "_id": "4mkgbqvSbq2FD3nkr",
        "icon": "user-lock",
        "iconGroup": "linear",
        "module": "roles",
        "moduleGroup": "system",
        "title": "Roles",
        "value": "/system/roles",
      },
    ]
  }
  moduleId=""
  onItemClick={[Function]}
  onSwitchClick={[Function]}
  selectedValue=""
  style={Object {}}
  switchEnabled={true}
  title="System"
>
  <div
    className="font:roboto-condensed border:all border-color:neutral-faded"
    style={
      Object {
        "borderRadius": "12px",
      }
    }
  >
    <div
      className="padding-y:5 padding-x:10 size:20 text-color:neutral-dim text:truncate border:bottom border-color:neutral-faded"
    >
      System
    </div>
    <div
      className="padding:5 overflow:hidden display:flex flex:items-center"
      style={
        Object {
          "borderRadius": "12px",
        }
      }
    >
      <div>
        <MenuItem
          className=""
          hidePicture={false}
          icon="speed-fast"
          iconColor="brand"
          iconGroup="linear"
          image=""
          module="status"
          moduleGroup="system"
          moduleId=""
          onClick={[Function]}
          pictureBgColor="white"
          pictureHeight={28}
          pictureWidth={28}
          style={Object {}}
          textColor="backdrop-alt"
          title="Status"
          value="/system/status"
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className="display:flex flex:items-center color:white padding:5 select:none cursor:pointer"
              onClick={[Function]}
            >
              <Thumb
                className=""
                color="white"
                height={28}
                icon="speed-fast"
                iconColor="brand"
                iconGroup="linear"
                image=""
                localImg=""
                offlineEnabled={false}
                width={28}
              >
                <div
                  className="display:flex flex:items-center flex:content-center border:rounded color:white"
                  style={
                    Object {
                      "WebkitFlex": "0 0 28px",
                      "flex": "0 0 28px",
                      "height": "28px",
                      "width": "28px",
                    }
                  }
                >
                  <FontIcon
                    className="text-color:brand"
                    color=""
                    group="linear"
                    icon="speed-fast"
                    size="20px"
                    style={Object {}}
                  >
                    <span
                      className="icon-linear:speed-fast text-color:brand"
                      style={
                        Object {
                          "color": "",
                          "fontSize": "20px",
                        }
                      }
                    />
                  </FontIcon>
                </div>
              </Thumb>
              <div
                className="display:flex flex:column flex:content-center margin-l:5 min-w:0 line-h:130p font:roboto-condensed"
              >
                <div
                  className="select:text size:16 line-h:120p text:truncate text-color:backdrop-alt"
                >
                  Status
                </div>
              </div>
            </div>
          </div>
        </MenuItem>
        <MenuItem
          className=""
          hidePicture={false}
          icon="laptop-phone"
          iconColor="brand"
          iconGroup="linear"
          image=""
          module="apps"
          moduleGroup="system"
          moduleId=""
          onClick={[Function]}
          pictureBgColor="white"
          pictureHeight={28}
          pictureWidth={28}
          style={Object {}}
          textColor="backdrop-alt"
          title="Apps"
          value="/system/apps"
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className="display:flex flex:items-center color:white padding:5 select:none cursor:pointer"
              onClick={[Function]}
            >
              <Thumb
                className=""
                color="white"
                height={28}
                icon="laptop-phone"
                iconColor="brand"
                iconGroup="linear"
                image=""
                localImg=""
                offlineEnabled={false}
                width={28}
              >
                <div
                  className="display:flex flex:items-center flex:content-center border:rounded color:white"
                  style={
                    Object {
                      "WebkitFlex": "0 0 28px",
                      "flex": "0 0 28px",
                      "height": "28px",
                      "width": "28px",
                    }
                  }
                >
                  <FontIcon
                    className="text-color:brand"
                    color=""
                    group="linear"
                    icon="laptop-phone"
                    size="20px"
                    style={Object {}}
                  >
                    <span
                      className="icon-linear:laptop-phone text-color:brand"
                      style={
                        Object {
                          "color": "",
                          "fontSize": "20px",
                        }
                      }
                    />
                  </FontIcon>
                </div>
              </Thumb>
              <div
                className="display:flex flex:column flex:content-center margin-l:5 min-w:0 line-h:130p font:roboto-condensed"
              >
                <div
                  className="select:text size:16 line-h:120p text:truncate text-color:backdrop-alt"
                >
                  Apps
                </div>
              </div>
            </div>
          </div>
        </MenuItem>
        <MenuItem
          className=""
          hidePicture={false}
          icon="server"
          iconColor="brand"
          iconGroup="linear"
          image=""
          module="servers"
          moduleGroup="system"
          moduleId=""
          onClick={[Function]}
          pictureBgColor="white"
          pictureHeight={28}
          pictureWidth={28}
          style={Object {}}
          textColor="backdrop-alt"
          title="Servers"
          value="/system/servers"
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className="display:flex flex:items-center color:white padding:5 select:none cursor:pointer"
              onClick={[Function]}
            >
              <Thumb
                className=""
                color="white"
                height={28}
                icon="server"
                iconColor="brand"
                iconGroup="linear"
                image=""
                localImg=""
                offlineEnabled={false}
                width={28}
              >
                <div
                  className="display:flex flex:items-center flex:content-center border:rounded color:white"
                  style={
                    Object {
                      "WebkitFlex": "0 0 28px",
                      "flex": "0 0 28px",
                      "height": "28px",
                      "width": "28px",
                    }
                  }
                >
                  <FontIcon
                    className="text-color:brand"
                    color=""
                    group="linear"
                    icon="server"
                    size="20px"
                    style={Object {}}
                  >
                    <span
                      className="icon-linear:server text-color:brand"
                      style={
                        Object {
                          "color": "",
                          "fontSize": "20px",
                        }
                      }
                    />
                  </FontIcon>
                </div>
              </Thumb>
              <div
                className="display:flex flex:column flex:content-center margin-l:5 min-w:0 line-h:130p font:roboto-condensed"
              >
                <div
                  className="select:text size:16 line-h:120p text:truncate text-color:backdrop-alt"
                >
                  Servers
                </div>
              </div>
            </div>
          </div>
        </MenuItem>
        <MenuItem
          className=""
          hidePicture={false}
          icon="site-map"
          iconColor="brand"
          iconGroup="linear"
          image=""
          module="versions"
          moduleGroup="system"
          moduleId=""
          onClick={[Function]}
          pictureBgColor="white"
          pictureHeight={28}
          pictureWidth={28}
          style={Object {}}
          textColor="backdrop-alt"
          title="Versions"
          value="/system/versions"
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className="display:flex flex:items-center color:white padding:5 select:none cursor:pointer"
              onClick={[Function]}
            >
              <Thumb
                className=""
                color="white"
                height={28}
                icon="site-map"
                iconColor="brand"
                iconGroup="linear"
                image=""
                localImg=""
                offlineEnabled={false}
                width={28}
              >
                <div
                  className="display:flex flex:items-center flex:content-center border:rounded color:white"
                  style={
                    Object {
                      "WebkitFlex": "0 0 28px",
                      "flex": "0 0 28px",
                      "height": "28px",
                      "width": "28px",
                    }
                  }
                >
                  <FontIcon
                    className="text-color:brand"
                    color=""
                    group="linear"
                    icon="site-map"
                    size="20px"
                    style={Object {}}
                  >
                    <span
                      className="icon-linear:site-map text-color:brand"
                      style={
                        Object {
                          "color": "",
                          "fontSize": "20px",
                        }
                      }
                    />
                  </FontIcon>
                </div>
              </Thumb>
              <div
                className="display:flex flex:column flex:content-center margin-l:5 min-w:0 line-h:130p font:roboto-condensed"
              >
                <div
                  className="select:text size:16 line-h:120p text:truncate text-color:backdrop-alt"
                >
                  Versions
                </div>
              </div>
            </div>
          </div>
        </MenuItem>
        <MenuItem
          className=""
          hidePicture={false}
          icon="user-lock"
          iconColor="brand"
          iconGroup="linear"
          image=""
          module="roles"
          moduleGroup="system"
          moduleId=""
          onClick={[Function]}
          pictureBgColor="white"
          pictureHeight={28}
          pictureWidth={28}
          style={Object {}}
          textColor="backdrop-alt"
          title="Roles"
          value="/system/roles"
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className="display:flex flex:items-center color:white padding:5 select:none cursor:pointer"
              onClick={[Function]}
            >
              <Thumb
                className=""
                color="white"
                height={28}
                icon="user-lock"
                iconColor="brand"
                iconGroup="linear"
                image=""
                localImg=""
                offlineEnabled={false}
                width={28}
              >
                <div
                  className="display:flex flex:items-center flex:content-center border:rounded color:white"
                  style={
                    Object {
                      "WebkitFlex": "0 0 28px",
                      "flex": "0 0 28px",
                      "height": "28px",
                      "width": "28px",
                    }
                  }
                >
                  <FontIcon
                    className="text-color:brand"
                    color=""
                    group="linear"
                    icon="user-lock"
                    size="20px"
                    style={Object {}}
                  >
                    <span
                      className="icon-linear:user-lock text-color:brand"
                      style={
                        Object {
                          "color": "",
                          "fontSize": "20px",
                        }
                      }
                    />
                  </FontIcon>
                </div>
              </Thumb>
              <div
                className="display:flex flex:column flex:content-center margin-l:5 min-w:0 line-h:130p font:roboto-condensed"
              >
                <div
                  className="select:text size:16 line-h:120p text:truncate text-color:backdrop-alt"
                >
                  Roles
                </div>
              </div>
            </div>
          </div>
        </MenuItem>
      </div>
      <div
        className="display:flex flex:column flex:items-center border:all border-color:neutral-faded margin:0-auto padding:10"
        style={
          Object {
            "borderRadius": "12px",
          }
        }
      >
        <Thumb
          className="padding-x:10 padding-b:10"
          color="white"
          height={70}
          icon=""
          iconColor="neutral-light"
          iconGroup=""
          image="http://imgur.com/abQ9EaG.png"
          localImg=""
          offlineEnabled={false}
          width={70}
        >
          <div
            className="display:flex flex:items-center flex:content-center border:rounded color:white padding-x:10 padding-b:10"
            style={
              Object {
                "WebkitFlex": "0 0 70px",
                "flex": "0 0 70px",
                "height": "70px",
                "width": "70px",
              }
            }
          >
            <img
              className="w:100p border:rounded"
              src="http://imgur.com/abQ9EaG.png"
            />
          </div>
        </Thumb>
        <div>
          <Button
            btn="neutral outline small raised"
            className=""
            onClick={[Function]}
            style={Object {}}
          >
            <button
              className=""
              data-btn="neutral outline small raised"
              onClick={[Function]}
              style={Object {}}
            >
              Switch
            </button>
          </Button>
        </div>
      </div>
    </div>
  </div>
</MenuCard>
`;
